feat: :sparkles: add title and metadata

--- a/index.html
+++ b/index.html
@@ -2,24 +2,35 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + HeroUI</title>
-    <meta key="title" content="Vite + HeroUI" property="og:title" />
     <meta
-      content="Make beautiful websites regardless of your design experience."
-      property="og:description"
-    />
-    <meta
-      content="Make beautiful websites regardless of your design experience."
-      name="description"
-    />
-    <meta
-      key="viewport"
-      content="viewport-fit=cover, width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
       name="viewport"
+      content="viewport-fit=cover, width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0"
     />
-    <link href="/favicon.ico" rel="icon" />
+
+    <title>HeroUI Lexical Editor — Modular Rich-Text Starter Kit</title>
+    <meta name="title" content="HeroUI Lexical Editor — Modular Rich-Text Starter Kit" />
+    <meta
+      name="description"
+      content="A powerful, modular rich-text editor built with Lexical and HeroUI. Designed for seamless integration with PayloadCMS and modern React apps."
+    />
+
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="https://dan6erbond.github.io/heroui-lexical-editor/" />
+    <meta property="og:title" content="HeroUI Lexical Editor" />
+    <meta
+      property="og:description"
+      content="Modular components to build your own Lexical editor with HeroUI styling. Copy, paste, and customize."
+    />
+    <meta property="og:image" content="https://dan6erbond.github.io/heroui-lexical-editor/og-image.png" />
+
+    <meta property="twitter:card" content="summary_large_image" />
+    <meta property="twitter:url" content="https://dan6erbond.github.io/heroui-lexical-editor/" />
+    <meta property="twitter:title" content="HeroUI Lexical Editor" />
+    <meta property="twitter:description" content="Build powerful rich-text editors with Lexical and HeroUI." />
+    <meta property="twitter:image" content="https://dan6erbond.github.io/heroui-lexical-editor/og-image.png" />
+
+    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <link rel="icon" href="/favicon.ico" />
   </head>
   <body>
     <div id="root"></div>
